syntax = "proto3";

package foo.bar.mylistChecker;

import "mixer/v1/template/extensions.proto";
import "mixer/v1/template/standard_types.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_CHECK;

message Template {
    string check_expression = 1;

    map<string, istio.mixer.v1.template.Value> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    istio.mixer.v1.template.Value anotherValueType = 7;

    map<string, int64> dimensionsFixedInt64ValueDType = 8;

    istio.mixer.v1.template.TimeStamp timeStamp = 9;

    istio.mixer.v1.template.Duration duration = 10;
}
